<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="miguel.pruebat2_miguelhalys.LoginActivity"
    tools:showIn="@layout/activity_login">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/authLayoutContainer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            style="@style/titles"
            android:text="@string/app_title"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/Subtitle"
            android:text="@string/app_subtitle"
            android:id="@+id/subtitle"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/authLayoutContainer"
        style="@style/authLayoutContainer"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            style="@style/AuthFieldContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/authLayout">
            <EditText
                style="@style/EditTextAuthFieldContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameField"
                android:hint="@string/username_hint"
                />
            <EditText
                style="@style/EditTextAuthFieldContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/passwordField"
                android:hint="@string/password_hint"
                />
        </LinearLayout>
        <Button
            style="@style/ButtonAuth"
            android:text="@string/Login_button"
            android:id="@+id/loginButton"
            android:onClick="logearse"
            android:layout_below="@+id/authLayout"
            android:layout_alignLeft="@+id/authLayout"
            android:layout_alignStart="@+id/authLayout"
            android:layout_alignRight="@+id/authLayout"
            android:layout_alignEnd="@+id/authLayout" />
    </RelativeLayout>

    <TextView
        android:text="@string/SignUp_label"
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authLayoutContainer"
        android:gravity="center"
        android:textColor="@android:color/white"/>
</RelativeLayout>
